<resources>
    <string name="app_name">  InClassExamples_F21    </string>
    <string name="hello_message">Type in your password:</string>
    <string name="button_text">Login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>